2010-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-tag-table): Simplify.

2010-10-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-prefetch-images): Only prefetch http images
	to avoid trying to snarf invalid stuff.

	* gnus-sum.el (gnus-summary-edit-article-done): Bind free variable.

	* gnus.el (gnus-message-archive-group): Quote value.
	(gnus-message-archive-group): Mark as changed.

	* shr.el (shr-add-font): Don't put the font properties on the newline
	or the indentation.

	* message.el (message-fix-before-sending): Change options when sending
	non-printable characters.

	* gnus.el (gnus-message-archive-method): Change the default to
	monthly outgoing groups.

	* gnus-sum.el (gnus-summary-edit-article-done): Try to replace articles
	that have gotten new numbers.

	* nnimap.el (nnimap-request-replace-article): New function.

2010-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-wash-html-in-text-plain-parts): Remove.
	(nnrss-request-article): Don't use special html washing code.

2010-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-tag-table): Remove useless nconc.

2010-10-20  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-wash-html): Simplify and remove the charset
	stuff.  Use the normal html rendering code instead of the special html
	washing code.

	* mm-view.el (mm-text-html-renderer-alist): Add the `shr' and
	`gnus-w3m' symbols.
	(mm-text-html-washer-alist): Removed.

	* mm-decode.el (mm-inline-text-html-renderer): Removed.
	(mm-inline-media-tests): Removed use.
	(mm-text-html-renderer): Change default to the `shr' symbol.

	* mm-view.el (mm-inline-text-html): Removed use.

	* gnus-art.el (gnus-blocked-images): New function.  Allow the
	`gnus-blocked-images' to be a function.
	(gnus-article-wash-function): Removed.

2010-10-20  Julien Danjou  <julien@danjou.info>

	* spam.el (spam-list-of-processors): Mark as obsolete.
