@@ -1,3 +1,13 @@
+2010-10-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* message.el (message-mode-map): Don't bind M-; to comment region, to
+	allow the global comment-dwim to work.
+
+2010-10-21  Julien Danjou  <julien@danjou.info>
+
+	* message.el (message-setup-1): Allow message-default-headers to be a
+	function.
+
 2010-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shr.el (shr-tag-table): Simplify.
